// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`misc functions > debug! > debug value. 1`] = `
"*** LITS DEBUG ***
{
  "__fn": true,
  "t": 301,
  "o": [
    {
      "as": {
        "mandatoryArguments": [
          "%1"
        ]
      },
      "a": 1,
      "b": [
        {
          "t": 203,
          "n": ">",
          "p": [
            {
              "t": 205,
              "v": "%1"
            },
            {
              "t": 201,
              "v": 2
            }
          ]
        }
      ],
      "f": {}
    }
  ]
}
"
`;

exports[`misc functions > debug! > debug value. 2`] = `
"*** LITS DEBUG ***
{
  "__fn": true,
  "sourceCodeInfo": {
    "code": "(debug! #(> %1 2))",
    "position": {
      "line": 1,
      "column": 9
    }
  },
  "t": 301,
  "o": [
    {
      "as": {
        "mandatoryArguments": [
          "%1"
        ]
      },
      "a": 1,
      "b": [
        {
          "t": 203,
          "n": ">",
          "p": [
            {
              "t": 205,
              "v": "%1",
              "tkn": {
                "t": 103,
                "v": "%1",
                "sourceCodeInfo": {
                  "code": "(debug! #(> %1 2))",
                  "position": {
                    "line": 1,
                    "column": 13
                  }
                }
              }
            },
            {
              "t": 201,
              "v": 2,
              "tkn": {
                "t": 102,
                "v": "2",
                "sourceCodeInfo": {
                  "code": "(debug! #(> %1 2))",
                  "position": {
                    "line": 1,
                    "column": 16
                  }
                }
              }
            }
          ],
          "tkn": {
            "t": 103,
            "v": ">",
            "sourceCodeInfo": {
              "code": "(debug! #(> %1 2))",
              "position": {
                "line": 1,
                "column": 11
              }
            }
          }
        }
      ],
      "f": {}
    }
  ]
}
"
`;

exports[`misc functions > debug! > multiple contexts 1`] = `
"*** LITS DEBUG ***
Context 0
  z  10

Context 1
  <empty>

Context 2 - Global context
  x     10
  foo   <301 function foo>
  bar   <301 function λ>
  plus  <310 function +>


"
`;

exports[`misc functions > debug! > multiple contexts 2`] = `
"*** LITS DEBUG ***
Context 0
  z  10

Context 1
  <empty>

Context 2 - Global context
  x     10
  foo   <301 function foo>
  bar   <301 function λ>
  plus  <310 function +>


"
`;
